# ptb-abstraction-experimentation

./: .gitignore  .gitmodules  .tool-versions  Dockerfile  README.md  _clean_experiments.sh  _clean_experiments_slp.sh  _hyperparam_optimization.sh  _hyperparam_optimization_slp.sh  _hyperparam_tuning.sh  _only_graphs.sh  _only_hyperparam_tuning.sh  _only_interval_analysis.sh  _run_experiments-2.sh  _run_experiments-updated.sh  _run_experiments.sh  _run_intervalanalysis_all_steps_slp.sh  _run_intervalanalysis_experiments.sh  _run_intervalanalysis_experiments_drp.sh  _run_intervalanalysis_experiments_slp.sh  _run_intervalanalysis_experiments_slp_step1.sh  _run_intervalanalysis_experiments_slp_step2.sh  _run_intervalanalysis_only.sh  _run_lowdynamic_experiments.sh  _run_lowdynamic_experiments_drp.sh  _run_lowdynamic_experiments_slp.sh  _setup_environment_ubuntu.sh  gp_RecSim_recsim_ecosystem_welfare_inst_recsim_ecosystem_welfare_1c.csv  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
_old/groupsolving/: step1_compute_experiment_statistics.py
_old/intervalanalysis-gurobi/: _config.py  _parameter_tuning.py  step2_create_baselise_run.py  step3_create_warm_start_policies_and_run.py
_old/lowdynamicfluent/: step2_create_grounded_ablated_model.py
_old/lowdynamicfluent-drp/: _utils.py
_old/statefluentablation/: _utils.py
data/: intervals_medium.csv  intervals_table_medium.csv
data/difficult_mixed_problems/: execution_time_random_policy_HVAC_instance3.csv  execution_time_random_policy_MarsRover_instance3.csv  (+4 more)
experiments/groupsolving/: _domains.py  (+3 more)
(+2220 files in other folders)
